--- a/cocos2dx/cocos2dx.vcxproj
+++ b/cocos2dx/cocos2dx.vcxproj
@@ -50,14 +50,14 @@
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;COCOS2DX_EXPORTS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\include;.\third_party\OGLES;.\third_party\vld;.\third_party\libpng;.\third_party\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\include;.\third_party\OGLES;.\third_party\vld;.\third_party\libpng;.\third_party\zlib;.\third_party\GLFW;.\platform;.\platform\win32;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4251;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libEGL.lib;libgles_cm.lib;libzlib.lib;libpng.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libzlib.lib;libpng.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>libc.lib;libcmt.lib;msvcrt.lib;libcd.lib;libcmtd.lib;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
     </Link>
     <PreLinkEvent>
@@ -84,17 +84,16 @@ xcopy /Y /Q "$(ProjectDir)\third_party\libraries\*.*" "$(OutDir)"</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="include\CCAffineTransform.h" />
-    <ClInclude Include="include\CCApplication.h" />
     <ClInclude Include="include\CCAutoreleasePool.h" />
+    <ClInclude Include="include\CCConfig.h" />
     <ClInclude Include="include\CCConfiguration.h" />
     <ClInclude Include="include\CCDirector.h" />
-    <ClInclude Include="include\CCEGLView.h" />
-    <ClInclude Include="include\CCFileUtils.h" />
     <ClInclude Include="include\CCGeometry.h" />
-    <ClInclude Include="include\CCImage.h" />
     <ClInclude Include="include\CCLabelTTF.h" />
     <ClInclude Include="include\CCLayer.h" />
     <ClInclude Include="include\ccMacros.h" />
+    <ClInclude Include="include\CCMenu.h" />
+    <ClInclude Include="include\CCMenuItem.h" />
     <ClInclude Include="include\CCMutableArray.h" />
     <ClInclude Include="include\CCMutableDictionary.h" />
     <ClInclude Include="include\CCNode.h" />
@@ -113,6 +112,13 @@ xcopy /Y /Q "$(ProjectDir)\third_party\libraries\*.*" "$(OutDir)"</Command>
     <ClInclude Include="include\CCZone.h" />
     <ClInclude Include="include\cocos2d.h" />
     <ClInclude Include="include\TransformUtils.h" />
+    <ClInclude Include="platform\CCFileUtils.h" />
+    <ClInclude Include="platform\CCGL.h" />
+    <ClInclude Include="platform\CCImage.h" />
+    <ClInclude Include="platform\CCPlatformConfig.h" />
+    <ClInclude Include="platform\CCStdC.h" />
+    <ClInclude Include="platform\win32\CCApplication.h" />
+    <ClInclude Include="platform\win32\CCEGLView.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="base_nodes\CCNode.cpp" />
@@ -126,6 +132,12 @@ xcopy /Y /Q "$(ProjectDir)\third_party\libraries\*.*" "$(OutDir)"</Command>
     <ClCompile Include="label_nodes\CCLabelTTF.cpp" />
     <ClCompile Include="layers_scenes_transitions_nodes\CCLayer.cpp" />
     <ClCompile Include="layers_scenes_transitions_nodes\CCScene.cpp" />
+    <ClCompile Include="menu_nodes\CCMenu.cpp" />
+    <ClCompile Include="menu_nodes\CCMenuItem.cpp" />
+    <ClCompile Include="platform\CCFileUtils.cpp" />
+    <ClCompile Include="platform\CCImage.cpp" />
+    <ClCompile Include="platform\win32\CCApplication.cpp" />
+    <ClCompile Include="platform\win32\CCEGLView.cpp" />
     <ClCompile Include="sprite_nodes\CCSprite.cpp" />
     <ClCompile Include="support\CCPointExtension.cpp" />
     <ClCompile Include="support\TransformUtils.cpp" />
@@ -133,10 +145,6 @@ xcopy /Y /Q "$(ProjectDir)\third_party\libraries\*.*" "$(OutDir)"</Command>
     <ClCompile Include="textures\CCTextureCache.cpp" />
     <ClCompile Include="touch_dispatcher\CCTouchDispatcher.cpp" />
     <ClCompile Include="touch_dispatcher\CCTouchHandler.cpp" />
-    <ClCompile Include="win32\CCApplication.cpp" />
-    <ClCompile Include="win32\CCEGLView.cpp" />
-    <ClCompile Include="win32\CCFileUtils.cpp" />
-    <ClCompile Include="win32\CCImage.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
