--- a/tests/tests.vcxproj.filters
+++ b/tests/tests.vcxproj.filters
@@ -1,13 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="AppDelegate.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="TestScene.cpp" />
+    <Filter Include="win32">
+      <UniqueIdentifier>{0f5decb4-3bd3-466e-a983-d008d709f07f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="tests">
+      <UniqueIdentifier>{4ef355a6-ab15-4eaf-9ab2-172ba4fe2b29}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AppDelegate.h" />
-    <ClInclude Include="main.h" />
-    <ClInclude Include="TestScene.h" />
+    <ClCompile Include="win32\main.cpp">
+      <Filter>win32</Filter>
+    </ClCompile>
+    <ClCompile Include="tests\AppDelegate.cpp">
+      <Filter>tests</Filter>
+    </ClCompile>
+    <ClCompile Include="tests\TestControllerScene.cpp">
+      <Filter>tests</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="win32\main.h">
+      <Filter>win32</Filter>
+    </ClInclude>
+    <ClInclude Include="tests\AppDelegate.h">
+      <Filter>tests</Filter>
+    </ClInclude>
+    <ClInclude Include="tests\TestControllerScene.h">
+      <Filter>tests</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
