--- a/tests/tests-2010.vcxproj
+++ b/tests/tests-2010.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{7FA168E2-8DCD-460C-8223-2AB37AE7DE20}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>tests</RootNamespace>
+    <ProjectName>tests</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
