--- a/tests/tests-2008.vcproj
+++ b/tests/tests-2008.vcproj
@@ -199,6 +199,10 @@
 				RelativePath=".\tests\TestControllerScene.h"
 				>
 			</File>
+			<File
+				RelativePath=".\tests\TestDefinition.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
