#17 整理tests工程测试代码，并去除cocos2dx库中的临时测试代码 点击主界面测试项后切换测试场景，测试场景暂时只有一个标题和返回主界面按钮

--- a/tests/tests-2008.vcproj
+++ b/tests/tests-2008.vcproj
@@ -192,6 +192,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\tests\TestBasicScene.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\tests\TestBasicScene.h"
+				>
+			</File>
+			<File
 				RelativePath=".\tests\TestControllerScene.cpp"
 				>
 			</File>
