#17 整理tests工程测试代码，并去除cocos2dx库中的临时测试代码 定义三个具体的测试层，并添加到测试类中去，暂无内容

--- a/tests/tests-2008.vcproj
+++ b/tests/tests-2008.vcproj
@@ -211,6 +211,30 @@
 				RelativePath=".\tests\TestDefinition.h"
 				>
 			</File>
+			<Filter
+				Name="LabelTest"
+				>
+				<File
+					RelativePath=".\tests\LabelTest\LabelTest.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\tests\LabelTest\LabelTest.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="SpriteTest"
+				>
+				<File
+					RelativePath=".\tests\SpriteTest\SpriteTest.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\tests\SpriteTest\SpriteTest.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
