#17 整理tests工程测试代码，并去除cocos2dx库中的临时测试代码 添加Opengl绘图测试

--- a/tests/tests-2008.vcproj
+++ b/tests/tests-2008.vcproj
@@ -235,6 +235,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="OpenGLTest"
+				>
+				<File
+					RelativePath=".\tests\OpenGLTest\OpenGLTest.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\tests\OpenGLTest\OpenGLTest.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
