--- a/tests/tests-2010.vcxproj
+++ b/tests/tests-2010.vcxproj
@@ -12,12 +12,21 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="tests\AppDelegate.cpp" />
+    <ClCompile Include="tests\LabelTest\LabelTest.cpp" />
+    <ClCompile Include="tests\OpenGLTest\OpenGLTest.cpp" />
+    <ClCompile Include="tests\SpriteTest\SpriteTest.cpp" />
+    <ClCompile Include="tests\TestBasicScene.cpp" />
     <ClCompile Include="tests\TestControllerScene.cpp" />
     <ClCompile Include="win32\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tests\AppDelegate.h" />
+    <ClInclude Include="tests\LabelTest\LabelTest.h" />
+    <ClInclude Include="tests\OpenGLTest\OpenGLTest.h" />
+    <ClInclude Include="tests\SpriteTest\SpriteTest.h" />
+    <ClInclude Include="tests\TestBasicScene.h" />
     <ClInclude Include="tests\TestControllerScene.h" />
+    <ClInclude Include="tests\TestDefinition.h" />
     <ClInclude Include="win32\main.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
