--- a/tests/tests-2010.vcxproj.filters
+++ b/tests/tests-2010.vcxproj.filters
@@ -7,6 +7,15 @@
     <Filter Include="tests">
       <UniqueIdentifier>{4ef355a6-ab15-4eaf-9ab2-172ba4fe2b29}</UniqueIdentifier>
     </Filter>
+    <Filter Include="tests\LabelTest">
+      <UniqueIdentifier>{2e7621bc-dfe6-404d-9493-b993bb2db1ca}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="tests\OpenGLTest">
+      <UniqueIdentifier>{d39a12da-7418-4ac1-ab88-ebbdd464e3f4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="tests\SpriteTest">
+      <UniqueIdentifier>{034040e7-68f6-4164-ab7a-b886122a1728}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="win32\main.cpp">
@@ -18,6 +27,18 @@
     <ClCompile Include="tests\TestControllerScene.cpp">
       <Filter>tests</Filter>
     </ClCompile>
+    <ClCompile Include="tests\LabelTest\LabelTest.cpp">
+      <Filter>tests\LabelTest</Filter>
+    </ClCompile>
+    <ClCompile Include="tests\OpenGLTest\OpenGLTest.cpp">
+      <Filter>tests\OpenGLTest</Filter>
+    </ClCompile>
+    <ClCompile Include="tests\SpriteTest\SpriteTest.cpp">
+      <Filter>tests\SpriteTest</Filter>
+    </ClCompile>
+    <ClCompile Include="tests\TestBasicScene.cpp">
+      <Filter>tests</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="win32\main.h">
@@ -27,6 +48,21 @@
       <Filter>tests</Filter>
     </ClInclude>
     <ClInclude Include="tests\TestControllerScene.h">
+      <Filter>tests</Filter>
+    </ClInclude>
+    <ClInclude Include="tests\LabelTest\LabelTest.h">
+      <Filter>tests\LabelTest</Filter>
+    </ClInclude>
+    <ClInclude Include="tests\OpenGLTest\OpenGLTest.h">
+      <Filter>tests\OpenGLTest</Filter>
+    </ClInclude>
+    <ClInclude Include="tests\SpriteTest\SpriteTest.h">
+      <Filter>tests\SpriteTest</Filter>
+    </ClInclude>
+    <ClInclude Include="tests\TestBasicScene.h">
+      <Filter>tests</Filter>
+    </ClInclude>
+    <ClInclude Include="tests\TestDefinition.h">
       <Filter>tests</Filter>
     </ClInclude>
   </ItemGroup>
