--- a/cocos2dx/cocos2dx-2008.vcproj
+++ b/cocos2dx/cocos2dx-2008.vcproj
@@ -458,6 +458,10 @@
 			RelativePath=".\CCDirector.cpp"
 			>
 		</File>
+		<File
+			RelativePath=".\cocos2d.cpp"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
