--- a/cocos2dx/cocos2dx-2012.vcxproj
+++ b/cocos2dx/cocos2dx-2012.vcxproj
@@ -97,6 +97,7 @@ xcopy /Y /Q "$(ProjectDir)\third_party\libraries\*.*" "$(OutDir)"</Command>
     <ClCompile Include="cocoa\CCGeometry.cpp" />
     <ClCompile Include="cocoa\CCObject.cpp" />
     <ClCompile Include="cocoa\CCZone.cpp" />
+    <ClCompile Include="cocos2d.cpp" />
     <ClCompile Include="label_nodes\CCLabelTTF.cpp" />
     <ClCompile Include="layers_scenes_transitions_nodes\CCLayer.cpp" />
     <ClCompile Include="layers_scenes_transitions_nodes\CCScene.cpp" />
