--- a/cocos2dx/proj.win32/cocos2dx-2010.vcxproj.filters
+++ b/cocos2dx/proj.win32/cocos2dx-2010.vcxproj.filters
@@ -1,184 +1,184 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="cocoa\CCObject.cpp">
-      <Filter>cocoa</Filter>
-    </ClCompile>
-    <ClCompile Include="cocoa\CCZone.cpp">
-      <Filter>cocoa</Filter>
-    </ClCompile>
-    <ClCompile Include="cocoa\CCAutoreleasePool.cpp">
-      <Filter>cocoa</Filter>
-    </ClCompile>
-    <ClCompile Include="base_nodes\CCNode.cpp">
+    <ClCompile Include="..\base_nodes\CCNode.cpp">
       <Filter>base_nodes</Filter>
     </ClCompile>
-    <ClCompile Include="cocoa\CCAffineTransform.cpp">
+    <ClCompile Include="..\cocoa\CCAffineTransform.cpp">
       <Filter>cocoa</Filter>
     </ClCompile>
-    <ClCompile Include="cocoa\CCGeometry.cpp">
+    <ClCompile Include="..\cocoa\CCAutoreleasePool.cpp">
       <Filter>cocoa</Filter>
     </ClCompile>
-    <ClCompile Include="layers_scenes_transitions_nodes\CCLayer.cpp">
-      <Filter>layers_scenes_transitions_nodes</Filter>
+    <ClCompile Include="..\cocoa\CCGeometry.cpp">
+      <Filter>cocoa</Filter>
     </ClCompile>
-    <ClCompile Include="layers_scenes_transitions_nodes\CCScene.cpp">
-      <Filter>layers_scenes_transitions_nodes</Filter>
+    <ClCompile Include="..\cocoa\CCObject.cpp">
+      <Filter>cocoa</Filter>
     </ClCompile>
-    <ClCompile Include="sprite_nodes\CCSprite.cpp">
-      <Filter>sprite_nodes</Filter>
+    <ClCompile Include="..\cocoa\CCZone.cpp">
+      <Filter>cocoa</Filter>
     </ClCompile>
-    <ClCompile Include="support\CCPointExtension.cpp">
-      <Filter>support</Filter>
-    </ClCompile>
-    <ClCompile Include="support\TransformUtils.cpp">
-      <Filter>support</Filter>
-    </ClCompile>
-    <ClCompile Include="textures\CCTexture2D.cpp">
-      <Filter>textures</Filter>
-    </ClCompile>
-    <ClCompile Include="touch_dispatcher\CCTouchDispatcher.cpp">
-      <Filter>touch_dispatcher</Filter>
-    </ClCompile>
-    <ClCompile Include="touch_dispatcher\CCTouchHandler.cpp">
-      <Filter>touch_dispatcher</Filter>
-    </ClCompile>
-    <ClCompile Include="CCDirector.cpp" />
-    <ClCompile Include="textures\CCTextureCache.cpp">
-      <Filter>textures</Filter>
-    </ClCompile>
-    <ClCompile Include="CCConfiguration.cpp" />
-    <ClCompile Include="label_nodes\CCLabelTTF.cpp">
+    <ClCompile Include="..\label_nodes\CCLabelTTF.cpp">
       <Filter>label_nodes</Filter>
     </ClCompile>
-    <ClCompile Include="menu_nodes\CCMenu.cpp">
+    <ClCompile Include="..\layers_scenes_transitions_nodes\CCLayer.cpp">
+      <Filter>layers_scenes_transitions_nodes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\layers_scenes_transitions_nodes\CCScene.cpp">
+      <Filter>layers_scenes_transitions_nodes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\menu_nodes\CCMenu.cpp">
       <Filter>menu_nodes</Filter>
     </ClCompile>
-    <ClCompile Include="menu_nodes\CCMenuItem.cpp">
+    <ClCompile Include="..\menu_nodes\CCMenuItem.cpp">
       <Filter>menu_nodes</Filter>
     </ClCompile>
-    <ClCompile Include="platform\CCFileUtils.cpp">
+    <ClCompile Include="..\platform\CCFileUtils.cpp">
       <Filter>platform</Filter>
     </ClCompile>
-    <ClCompile Include="platform\CCImage.cpp">
+    <ClCompile Include="..\platform\CCImage.cpp">
       <Filter>platform</Filter>
     </ClCompile>
-    <ClCompile Include="platform\win32\CCApplication.cpp">
+    <ClCompile Include="..\platform\win32\CCApplication.cpp">
       <Filter>platform\win32</Filter>
     </ClCompile>
-    <ClCompile Include="platform\win32\CCEGLView.cpp">
+    <ClCompile Include="..\platform\win32\CCEGLView.cpp">
       <Filter>platform\win32</Filter>
     </ClCompile>
-    <ClCompile Include="cocos2d.cpp" />
+    <ClCompile Include="..\sprite_nodes\CCSprite.cpp">
+      <Filter>sprite_nodes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\support\CCPointExtension.cpp">
+      <Filter>support</Filter>
+    </ClCompile>
+    <ClCompile Include="..\support\TransformUtils.cpp">
+      <Filter>support</Filter>
+    </ClCompile>
+    <ClCompile Include="..\textures\CCTexture2D.cpp">
+      <Filter>textures</Filter>
+    </ClCompile>
+    <ClCompile Include="..\textures\CCTextureCache.cpp">
+      <Filter>textures</Filter>
+    </ClCompile>
+    <ClCompile Include="..\touch_dispatcher\CCTouchDispatcher.cpp">
+      <Filter>touch_dispatcher</Filter>
+    </ClCompile>
+    <ClCompile Include="..\touch_dispatcher\CCTouchHandler.cpp">
+      <Filter>touch_dispatcher</Filter>
+    </ClCompile>
+    <ClCompile Include="..\CCConfiguration.cpp" />
+    <ClCompile Include="..\CCDirector.cpp" />
+    <ClCompile Include="..\cocos2d.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\CCMutableArray.h">
+    <ClInclude Include="..\include\CCAffineTransform.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCObject.h">
+    <ClInclude Include="..\include\CCAutoreleasePool.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCZone.h">
+    <ClInclude Include="..\include\CCConfig.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCAutoreleasePool.h">
+    <ClInclude Include="..\include\CCConfiguration.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCAffineTransform.h">
+    <ClInclude Include="..\include\CCDirector.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCDirector.h">
+    <ClInclude Include="..\include\CCGeometry.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCGeometry.h">
+    <ClInclude Include="..\include\CCLabelTTF.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCLayer.h">
+    <ClInclude Include="..\include\CCLayer.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\ccMacros.h">
+    <ClInclude Include="..\include\ccMacros.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCNode.h">
+    <ClInclude Include="..\include\CCMenu.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCPointExtension.h">
+    <ClInclude Include="..\include\CCMenuItem.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCScene.h">
+    <ClInclude Include="..\include\CCMutableArray.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCSprite.h">
+    <ClInclude Include="..\include\CCMutableDictionary.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCString.h">
+    <ClInclude Include="..\include\CCNode.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCTexture2D.h">
+    <ClInclude Include="..\include\CCObject.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCTouch.h">
+    <ClInclude Include="..\include\CCPointExtension.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCTouchDelegateProtocol.h">
+    <ClInclude Include="..\include\CCScene.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCTouchDispatcher.h">
+    <ClInclude Include="..\include\CCSprite.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCTouchHandler.h">
+    <ClInclude Include="..\include\CCString.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\ccTypes.h">
+    <ClInclude Include="..\include\CCTexture2D.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\cocos2d.h">
+    <ClInclude Include="..\include\CCTextureCache.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\TransformUtils.h">
+    <ClInclude Include="..\include\CCTouch.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCMutableDictionary.h">
+    <ClInclude Include="..\include\CCTouchDelegateProtocol.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCTextureCache.h">
+    <ClInclude Include="..\include\CCTouchDispatcher.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCConfiguration.h">
+    <ClInclude Include="..\include\CCTouchHandler.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCLabelTTF.h">
+    <ClInclude Include="..\include\ccTypes.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCMenu.h">
+    <ClInclude Include="..\include\CCZone.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCMenuItem.h">
+    <ClInclude Include="..\include\cocos2d.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="platform\CCStdC.h">
+    <ClInclude Include="..\include\TransformUtils.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\platform\CCFileUtils.h">
       <Filter>platform</Filter>
     </ClInclude>
-    <ClInclude Include="platform\CCGL.h">
+    <ClInclude Include="..\platform\CCGL.h">
       <Filter>platform</Filter>
     </ClInclude>
-    <ClInclude Include="platform\CCFileUtils.h">
+    <ClInclude Include="..\platform\CCImage.h">
       <Filter>platform</Filter>
     </ClInclude>
-    <ClInclude Include="platform\CCImage.h">
+    <ClInclude Include="..\platform\CCPlatformConfig.h">
       <Filter>platform</Filter>
     </ClInclude>
-    <ClInclude Include="platform\CCPlatformConfig.h">
+    <ClInclude Include="..\platform\CCStdC.h">
       <Filter>platform</Filter>
     </ClInclude>
-    <ClInclude Include="platform\win32\CCApplication.h">
+    <ClInclude Include="..\platform\win32\CCApplication.h">
       <Filter>platform\win32</Filter>
     </ClInclude>
-    <ClInclude Include="platform\win32\CCEGLView.h">
+    <ClInclude Include="..\platform\win32\CCEGLView.h">
       <Filter>platform\win32</Filter>
-    </ClInclude>
-    <ClInclude Include="include\CCConfig.h">
-      <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
