--- a/cocos2dx/proj.win32/cocos2dx-2008.vcproj
+++ b/cocos2dx/proj.win32/cocos2dx-2008.vcproj
@@ -18,8 +18,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName).win32"
+			IntermediateDirectory="$(ConfigurationName).win32"
 			ConfigurationType="2"
 			CharacterSet="1"
 			>
