--- a/cocos2dx/proj.win32/Makefile
+++ b/cocos2dx/proj.win32/Makefile
@@ -125,11 +125,13 @@ $(OUT_DIR)\$(TARGET):$(OBJECTS)
 
 .cpp.obj:
 	@echo compiling...
+	@if not exist "$(OBJ_DIR)" mkdir "$(OBJ_DIR)"
 	@$(CXX) $(CXXFLAGS) $(INCLUDES) $(DEFINES) /Fo"$@" $< 
 
 clean:
 	@echo deleting objs...
-	@$(DEL) $(OBJECTS) $(OBJ_DIR)\vcx0.idb $(OBJ_DIR)\vcx0.pdb
+	@$(DEL) $(OBJECTS) $(OBJ_DIR)\vcx0.idb $(OBJ_DIR)\vcx0.pdb 2>nul
 	@echo deleting targets...
 	@$(DEL) $(OUT_DIR)\$(PROJECT_NAME).pdb $(OUT_DIR)\$(PROJECT_NAME).exp \
-	$(OUT_DIR)\$(PROJECT_NAME).ilk $(OUT_DIR)\$(PROJECT_NAME).lib $(OUT_DIR)\$(PROJECT_NAME).dll
+		$(OUT_DIR)\$(PROJECT_NAME).ilk $(OUT_DIR)\$(PROJECT_NAME).lib $(OUT_DIR)\$(PROJECT_NAME).dll 2>nul
+	@echo deleting completed.
